--- a/api/package.json
+++ b/api/package.json
@@ -2,6 +2,7 @@
   "name": "twclon",
   "version": "1.0.0",
   "description": "",
+  "main": "server.js",
   "scripts": {
     "start": "nodemon server.js"
   },
@@ -10,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
